src/less/elements.less
/* ... */
.CodeMirror-hints {
  position: absolute;
  z-index: 105;
  overflow: hidden;
  list-style: none;

  margin: 0;
  padding: 2px;

  -webkit-box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.2);
  box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.2);
  border-radius: 2px;
  border: 1px solid black;

  background: rgba(0, 0, 0, 0.6);
  /* font-size: 90%; */
  font-family: monospace;

  max-height: 8em;
  overflow-y: auto;
  line-height: 13px;
  min-width: 250px;

  .CodeMirror-hint-active {
    background: @theme-list-active-bg; /* #558b2f; */
    color: white;

    .arg-info,
    .prop-info {
      max-height: 300px;
      overflow: hidden;
      margin: 0px;
      padding-left: 20px;
      color: @theme-text-sub;
    }
  }
}
.fib-container[data-type="SceneEditor"] {
  border: 1px solid rgba(147, 160, 166, 0.5);

  &.single,
  &.no-split,
  &.first {
    height: auto !important;
    margin-top: 20px;
  }
  
  &.first {
    .sidebar {
      width: auto;
      margin: 0px;
      margin-top: @window-padding;
      /* display: inline-table; */
      position: initial;
  
      &.hidden {
        height: 0px;
        margin: 0px;
        margin-top: 26px;
        display: inline-block;
      }
    }
  
    #toggle-scene-sidebar {
      margin-top: 24px;
    }
  }
}
/* ... */

